add summary func, exception handler
