# order-service/src/main/java/com/moreira/order_service/controller/OrderController.java
@@ -2,11 +2,13 @@ package com.moreira.order_service.controller;
 
 import com.moreira.order_service.mapper.OrderMapper;
 import com.moreira.order_service.model.Order;
+import com.moreira.order_service.model.PriceSummary;
 import com.moreira.order_service.service.OrderService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
 
@@ -36,6 +38,12 @@ public class OrderController implements OrderApi {
     public ResponseEntity<List<Order>> getOrders(Long page, Long size) {
         System.out.println("starting the getOrders");
         return ResponseEntity.ok(orderMapper.orderServiceModelToOrder(orderService.getOrders(page, size)));
+    }
+
+    @Override
+    public ResponseEntity<List<PriceSummary>> getSummaryForEachCustomer(LocalDate startDate, LocalDate endDate) {
+
+        return ResponseEntity.ok(orderMapper.priceSummaryServiceModelToPriceSummary(orderService.calculatePriceSummaries(startDate, endDate)));
     }
 
 }
