# order-service/src/main/java/com/moreira/order_service/models/PriceSummaryRecord.java
@@ -1,0 +1,6 @@
+package com.moreira.order_service.models;
+
+import java.math.BigDecimal;
+
+public record PriceSummaryRecord (String customer, Double total){
+}
