# order-service/src/main/java/com/moreira/order_service/models/PriceSummaryServiceModel.java
@@ -1,0 +1,9 @@
+package com.moreira.order_service.models;
+
+import lombok.Data;
+
+@Data
+public class PriceSummaryServiceModel {
+    private String customer;
+    private Double total;
+}
